--- a/Pong/Pong.csproj
+++ b/Pong/Pong.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Ball.cs" />
+    <Compile Include="Countdown.cs" />
     <Compile Include="Pong.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="Player.cs" />
